# mujoco_RGBD

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: Plane.hpp  Pre_process.hpp  Stair.hpp  StairDetector.hpp  Utilities.hpp  mujoco_rgbd_camera.hpp
model/scene/: curve.xml  exoskeleton.xml  plane1.xml  plane2.xml  plane3.xml  plane4.xml  plane5.xml  plane6.xml  plane7.xml  scene.xml  scene_single_link.xml  scene_terrain.xml  slope_down_12.xml  slope_down_4.xml  slope_down_8.xml  slope_up_12.xml  slope_up_4.xml  slope_up_8.xml  stair_down_13.xml  stair_down_17.xml  stair_down_varable.xml  stair_up_13.xml  stair_up_17.xml  stair_up_varable.xml  stone1.xml  stone2.xml  stone3.xml
model/scene/meshes/: EB.stl  EL-ankle.stl  EL-hip.stl  EL-knee.stl  ER-ankle.stl  ER-hip.stl  ER-knee.stl  L-arm.stl  L-forearm.stl  L-hand.stl  R-arm.stl  R-forearm.stl  R-hand.stl  base.stl  body.stl  head.stl  slope.stl
src/: camera.cpp  main.cpp  two_window.cpp
src/stair_perception/: Plane.cpp  Pre_process.cpp  Stair.cpp  StairDetector.cpp  Utilities.cpp
